removed countdown and added "next_event"

--- a/skins/theme/dtml/it/footer.html
+++ b/skins/theme/dtml/it/footer.html
@@ -2,7 +2,7 @@
 <footer class="main-footer">
     <div class="container">
         <div class="row">	
-            <div class="widget col-md-3">
+            <!--<div class="widget col-md-3">-->
                 <div class="about">
                     <h2 class="title">About <span class="border"></span></h2>
                     <p>Vivamus ante nulla, ultrices ut molestie pellentesque, posuere eu ligula. In porttitor in turpis eu porttitor. </p> 
@@ -13,9 +13,9 @@
                     <li> <i class="fa-li fa fa-phone fa-flip-horizontal"></i>+90 555 55 55</li>
                     <li><i class="fa-li fa fa-envelope-o "></i><a href="#">info@example.com</a></li>
                 </ul>           
-            </div>
+            <!--</div>-->
 
-            <div class="widget col-md-3">
+<!--            <div class="widget col-md-3">
                 <h2 class="title">Recent Blog Posts<span class="border"></span></h2>
                 <div class="recent-blog">
                     <div class="recent-img">
@@ -63,7 +63,7 @@
                 <div class="flicker flickrwidget"></div>
 
 
-            </div>
+            </div>-->
         </div> 
     </div>
 </footer>     
