--- a/skins/theme/dtml/it/widget/popular_events.html
+++ b/skins/theme/dtml/it/widget/popular_events.html
@@ -2,18 +2,18 @@
 <div class="col-md-3">
     <div class="event">
         <div class="eventsimg">
-            <img src="skins/theme/img/515x390.gif" alt="">
+            <img src='data:{$instance->foto->filetype}; base64,{$instance->foto->data}' alt="{$instance->name}"/>
         </div>
         <div class="event-content">
-            <h3 class="title">title: {$instance->title}</h3>
-            <p>body: {$instance->body}</p>
-            <a href="#" class="btn btn-pri">buy tıcket</a>
+            <h3 class="title"><a href="events.php?user_events_id={$instance->id}">{$instance->title}</a></h3>
+            <p>{$instance->body|truncate:250:"[...]"}</p>
+            <a href="events.php?user_events_id={$instance->id}" class="btn btn-pri">read more</a>
         </div>
         <div class="links clearfix">
             <ul>
                 <li><a class='st_sharethis_large' displayText='ShareThis'><i class="icon fa fa-share"></i> share</a></li>
-                <li><a href="#"><i class="icon fa fa-heart"></i>26</a></li>
-                <li><a href="#" ><i class="icon fa fa-comment"></i>33</a> </li> 
+                <!--<li><a href="#"><i class="icon fa fa-heart"></i>26</a></li>-->
+                <li><a href="#" ><i class="icon fa fa-comment"></i>{$instance->user_comments|@count}</a> </li> 
             </ul> 
         </div>
     </div>
