--- a/skins/theme/dtml/it/header.html
+++ b/skins/theme/dtml/it/header.html
@@ -39,8 +39,8 @@
                 </div>
 
                 <div id="sb-search" class="sb-search">
-                    <form>
-                        <input class="sb-search-input" placeholder="Search" type="text" name="search" id="search">
+                    <form method="get" action="search.php">
+                        <input class="sb-search-input" placeholder="Search" type="text" name="title" id="search">
                         <input class="sb-search-submit" type="submit" value="">
                         <span class="sb-icon-search"></span>
                     </form>
