--- a/skins/theme/dtml/it/widget/last_events.html
+++ b/skins/theme/dtml/it/widget/last_events.html
@@ -12,8 +12,7 @@
         <div class="links clearfix">
             <ul>
                 <li><a class='st_sharethis_large' displayText='ShareThis'><i class="icon fa fa-share"></i> share</a></li>
-                <!--<li><a href="#"><i class="icon fa fa-heart"></i>26</a></li>-->
-                <li><a href="#" ><i class="icon fa fa-comment"></i>{$instance->user_comments|@count}</a> </li> 
+                <li><a href="events.php?user_events_id={$instance->id}#comments" ><i class="icon fa fa-comment"></i>{$instance->user_comments|@count}</a> </li> 
             </ul> 
         </div>
     </div>
