--- a/skins/theme/dtml/it/home.html
+++ b/skins/theme/dtml/it/home.html
@@ -9,33 +9,7 @@
 
 <!-- Event Form -->
 <section class="eventform newsection">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3">
-                <small>Find what you want</small>
-                <h2 class="title">event or conference</h2>
-            </div>
-
-            <div class="col-md-9 eventform-con">
-                <form action="search.php" method="GET">
-                    <div class="form-input search-location">
-                        <input type="text" name="title" value="" placeholder="Event Title">
-                        <i class="icon icon-s fa fa-search"></i>
-                        <!--<button class="icon fa fa-globe"></button>-->
-                    </div>
-
-                    <div class="form-input">
-                        <input placeholder="mm/dd/yy" name="date" class="date_timepicker_start">
-                        <button type="button"  value="open" class="open icon fa fa-calendar"></button>
-                    </div>
-
-                    <div class="form-input">
-                        <button class="btn btn-pri ">find event</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
+    {$search_form}
 </section>
 <!--  Events -->
 <section class="events newsection">
