--- a/skins/theme/dtml/it/single/user_events_single.html
+++ b/skins/theme/dtml/it/single/user_events_single.html
@@ -90,29 +90,7 @@ SINGLE TEMPLATE STANDARD; <h1>user_events</h1>
                 <div class="comment-form newsection">
                     <h2 class="title">Leave A Reply</h2>
 
-                    <form>
-                        <div class="row">
-                            <p class="col-md-6">
-                                <label>Name<span>*</span></label>
-                                <input type="text" placeholder="Name" class="textflied">
-                            </p>
-                            <p class="col-md-6">
-                                <label>Email<span>*</span></label>
-                                <input type="text" placeholder="Email" class="textflied">
-                            </p>
-                            <p class="col-md-12">
-                                <label>SUBJECT<span>*</span></label>
-                                <input type="text" placeholder="Subject" class="textflied">
-                            </p>
-                            <p class="col-md-12">
-                                <label>COMMENT<span>*</span></label>
-                                <textarea rows="10" type="text" placeholder="comment" class="texttextarea"></textarea>
-                            </p>
-                            <p class="col-md-12">
-                                <button class="btn btn-disabled">POST COMMENT</button>
-                            </p>
-                        </div> 
-                    </form>
+                    {$comment_form}
 
                 </div> 
             </div>
